--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -26,6 +26,7 @@
     <target.pentaho-server.dir>${target.dir}/${package.id}</target.pentaho-server.dir> <!-- where the server will get assembled -->
 
     <target.pentaho-server.solutions.dir>${target.pentaho-server.dir}/pentaho-solutions</target.pentaho-server.solutions.dir>
+    <target.pentaho-server.samples.dir>${target.pentaho-server.solutions.dir}/plugin-samples</target.pentaho-server.samples.dir>
     <target.pentaho-server.system.dir>${target.pentaho-server.solutions.dir}/system</target.pentaho-server.system.dir>
       
     <target.pentaho-server.plugins.dir>${target.pentaho-server.system.dir}</target.pentaho-server.plugins.dir> 
@@ -87,7 +88,7 @@
     <build>
         <plugins>
             
-            <!-- [START] copy package-res and package-res-merged-server configuration files into ${target.pentaho-server.dir} -->
+            <!-- [START] copy package-res and package-res-merged-server configuration files into assembly/target/pentaho-server -->
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>${maven-resources-plugin.version}</version>
@@ -112,9 +113,9 @@
                   </execution>
                 </executions>
             </plugin>
-            <!-- [END] copy package-res and package-res-merged-server configuration files into ${target.pentaho-server.dir} -->
+            <!-- [END] copy package-res and package-res-merged-server configuration files into assembly/target/pentaho-server -->
 
-            <!-- [START] unpack platform-plugins and kettle-plugins into ${target.pentaho-server.system.dir} -->
+            <!-- [START] unpack platform-plugins, kettle-plugins and pentaho-samples into the proper locations -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -129,6 +130,96 @@
 
                         <configuration>
                             <artifactItems>
+
+                                <!-- [START] unpack platform-plugins into /pentaho-solutions/system -->
+                                <artifactItem>
+                                    <groupId>pentaho-kettle</groupId>
+                                    <artifactId>pdi-pur-plugin</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>pentaho-cdf</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>cgg</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>cda</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>pentaho-cdf-dd</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>sparkl</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>pentaho-jpivot-plugin</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>pentaho-karaf-assembly</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                    <classifier>server</classifier>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>common-ui</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>data-access-plugin</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho</groupId>
+                                    <artifactId>pentaho-pdi-platform-plugin-package</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>pentaho-reporting-engine</groupId>
+                                    <artifactId>pentaho-reporting-engine-classic-core-platform-plugin-package</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                </artifactItem>
+                                <!-- [END] unpack platform-plugins into /pentaho-solutions/system -->
+
+                                <!-- [START] unpack kettle-plugins into /pentaho-solutions/system/kettle/plugins -->
                                 <artifactItem>
                                     <groupId>pentaho</groupId>
                                     <artifactId>pentaho-big-data-plugin</artifactId>
@@ -138,7 +229,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>pentaho</groupId>
-                                    <artifactId>pentaho-big-data-plugin-samples</artifactId>
+                                    <artifactId>pentaho-cassandra-plugin</artifactId>
                                     <version>${project.version}</version>
                                     <type>zip</type>
                                     <outputDirectory>${target.pentaho-server.kettle.plugins.dir}</outputDirectory>
@@ -290,114 +381,45 @@
                                     <type>zip</type>
                                     <outputDirectory>${target.pentaho-server.kettle.plugins.dir}</outputDirectory>
                                 </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho-kettle</groupId>
-                                    <artifactId>pdi-pur-plugin</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>pentaho-cdf</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>cgg</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>cda</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>pentaho-cdf-dd</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>sparkl</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>pentaho-jpivot-plugin</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>pentaho-karaf-assembly</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                    <classifier>server</classifier>
-                                </artifactItem>
+                                <!-- [END] unpack kettle-plugins into /pentaho-solutions/system/kettle/plugins -->
+
+                                <!-- [START] unpack pentaho-samples into /pentaho-solutions/plugin-samples -->
                                 <artifactItem>
                                     <groupId>pentaho</groupId>
                                     <artifactId>pentaho-cdf-samples</artifactId>
                                     <version>${project.version}</version>
                                     <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                    <outputDirectory>${target.pentaho-server.samples.dir}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>pentaho</groupId>
                                     <artifactId>cda-samples</artifactId>
                                     <version>${project.version}</version>
                                     <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                    <outputDirectory>${target.pentaho-server.samples.dir}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>pentaho</groupId>
                                     <artifactId>pentaho-cdf-dd-solution</artifactId>
                                     <version>${project.version}</version>
                                     <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
+                                    <outputDirectory>${target.pentaho-server.samples.dir}</outputDirectory>
                                 </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>common-ui</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
+                                <!-- [END] unpack pentaho-samples into /pentaho-solutions/plugin-samples -->
 
+                                
+                                <!-- [START][TODO] -->
+                                <!-- 
                                 <artifactItem>
                                     <groupId>pentaho</groupId>
-                                    <artifactId>data-access-plugin</artifactId>
+                                    <artifactId>pentaho-big-data-plugin-samples</artifactId>
                                     <version>${project.version}</version>
                                     <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho</groupId>
-                                    <artifactId>pentaho-pdi-platform-plugin-package</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>pentaho-reporting-engine</groupId>
-                                    <artifactId>pentaho-reporting-engine-classic-core-platform-plugin-package
-                                    </artifactId>
-                                    <version>${project.version}</version>
-                                    <type>zip</type>
-                                    <outputDirectory>${target.pentaho-server.plugins.dir}</outputDirectory>
-                                </artifactItem>
+                                    <outputDirectory>${target.pentaho-server.samples.dir}</outputDirectory>
+                                </artifactItem> 
+                                -->
+                                <!-- [END][TODO] -->
+                                
                             </artifactItems>
 
                             <overWriteReleases>false</overWriteReleases>
@@ -407,8 +429,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- [END] unpack platform-plugins and kettle-plugins into ${target.pentaho-server.system.dir} -->
-
+            <!-- [END] unpack platform-plugins, kettle-plugins and pentaho-samples into the proper locations -->
 
 
             
